# medical_ai_assistant

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0fe8100f4f24_create_conversations_and_messages_tables.py  1ff988865806_create_conversations_and_messages_tables.py  b3c6e483b4b4_create_users_and_documents_tables.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
app/modules/auth/: dto.py  router.py  service.py
app/modules/chat/: dto.py  models.py  router.py  service.py
app/modules/document/: dto.py  models.py  router.py  service.py
app/modules/user/: dto.py  models.py  router.py  service.py
app/rag/: embedder.py  pipeline.py  vector_store.py
