[project]
name = "ai-medical-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.1",
    "google-genai>=2.5.0",
    "google-generativeai>=0.8.6",
    "instructor>=1.15.1",
    "llama-index>=0.14.22",
    "llama-index-vector-stores-qdrant>=0.10.1",
    "ollama>=0.6.2",
    "passlib[bcrypt]==1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "unstructured[pdf]>=0.22.29",
    "uuid>=1.30",
]
